# vibe-agency

./: .debt_backlog.json  .gitignore  .knowledge_index.yaml  .session_handoff.json  .session_handoff_gad006.json  AGENTS_START_HERE.md  AOS_V0.2_FULL_MIGRATION_PLAN.md  ARCHITECTURAL_AUDIT_RAW.md  ARCHITECTURE_QUESTION_STATE_MANAGEMENT.md  ARTIFACT_REVIEW_ANALYSIS.md  ARTIFACT_REVIEW_INDEX.md  BEDROCK_ENVIRONMENT_ANALYSIS.md  CHANGELOG.md  CLAIMS_VS_REALITY.md  CLAUDE.md  COMPOSED_PROMPT.md  CONTENT_GAPS_FOUND.md  CONTEXT_SUMMARY_FOR_LEAD_ARCHITECT.md  CORRECTIONS_CLAUDE_MD.patch  CORRECTIONS_STATUS_MD.patch  EXECUTIVE_SUMMARY.md  EXECUTIVE_SUMMARY_GAD_DEBT.md  FOUNDATION_FIX_PLAN.md  GAD_DEBT_ANALYSIS.md  GITHUB_SECRETS_SETUP.md  PR_DESCRIPTION_FINAL.md  PR_TITLE.txt  QUESTION_BEDROCK_TRUTH_LAYER.md  README.md  REFACTORING_PLAN.md  REVIEW_SUMMARY.md  SEMANTIC_ANALYSIS_TECHNICAL_DEBT.md  SENIOR_SONNET_ANALYSIS.md  SESSION_HANDOVER_2025-11-12.md  STATUS.md  STEWARD.md  WEBHOOK_INVESTIGATION_REPORT.md  agency_os_orchestrator.py  check_dependencies.py  demo_google_integration.py  (+24 more)
.githooks/: pre-commit  pre-push
.github/agents/: my-agent.agent.md
.github/workflows/: post-merge-validation.yml  test-google-api.yml  test-google-provider.yml  test-secrets.yml  test.yml  validate.yml
agency_os/03_agents/: __init__.py  base_agent.py  base_specialist.py
agency_os/config/: phoenix.py
agency_os/persistence/: sqlite_store.py
agency_os/playbooks/: README.md
apps/agency/: cli.py  prompts.py
apps/vibe_studio/: sysinfo.py
artifacts/planning/: GAD-701_SPEC.md  architecture.v1.json
config/: vibe_config.py
config/roadmaps/: README.md  demo_gad701_roadmap.yaml  steward_gad_roadmap.yaml
config/schemas/: project_manifest.schema.json  session_handoff.schema.json
data/: vibe.db
docs/: DATAFLOW_ANALYSIS.md  Masterprompt_GAD-800  PROJECT_STATUS.md  STEWARD_MISSION_SUMMARY.md  STRATEGY_SHIFT.md
docs/analysis/: LEAN_OPTIMIZATION_OPPORTUNITIES.md
docs/architecture/: ARCHITECTURE_MAP.md  ARCHITECTURE_REGISTRY.md  BOOT_SEQUENCE_KERNEL_REDESIGN.md  EXECUTION_MODE_STRATEGY.md  GAD-000_OPERATOR_INVERSION.md  GAD-002_Core_SDLC_Orchestration.md  GAD-004-ADDITION_Mandatory_Git_Hooks.md  GAD-004_Multi_Layered_Quality_Enforcement.md  GAD-005-ADDITION_AMBIENT_CONTEXT_FINAL.md  (+12 more)
handlers/: __init__.py  coding_handler.py  deployment_handler.py  maintenance_handler.py  planning_handler.py  testing_handler.py
orchestrator/: __init__.py  core_orchestrator.py
scripts/: __init__.py  arch_041_factory_run.py  audit_gads.py  bootstrap_mission.py  bootstrap_phase3.py  debug_config.py  generate-integrity-manifest.py  prove_intelligence.py  prove_research_works.py  run_research.py  simulate_workflow.py  test_context_injection.py  test_iron_dome.py  validate_research_tools.py  verify-system-integrity.py  verify_full_stack.py
test_workspace_golden/: test_prompt_registry.py
tests/: .gitignore  __init__.py  conftest.py  manual_planning_test.py  smoke_test_arch003_migration.py  test_arch_010_repair_loop.py  test_archive.py  test_batch_operations.py  test_boot_mode.py  test_canonical_schemas.py  test_cli_json.py  test_coding_workflow.py  test_cold_boot.sh  test_core_orchestrator_tools.py  test_crew_assembly.py  test_deep_analysis.py  test_deployment_workflow.py  test_equivalence.py  test_executor.py  test_export_engine.py  test_file_based_delegation.py  test_full_planning_execution.py  test_hermetic_seal.py  test_human_provider.py  test_identity.py  test_integration_registry.py  test_introspection.py  test_kernel_checks.py  test_legacy_loader.py  test_motd.py  test_multi_layer_integration.py  test_neural_link.py  test_orchestrator_file_delegation.py  test_orchestrator_state_machine.py  test_orchestrator_vibe_config.py  test_planning_workflow.py  test_playbook_aos_integration.py  test_project_memory.py  test_prompt_composition.py  test_prompt_registry.py  (+14 more)
vibe_core/: agent_protocol.py  introspection.py  kernel.py  ledger.py
workspace/: BACKLOG.md
workspaces/: .workspace_index.yaml
(+179 files in other folders)
