# Vibe Agency - Python Project Configuration
# Following our own VIBE_ALIGNER standards!

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibe-agency"
version = "0.1.0"
description = "AI-powered software planning system - transforms ideas into validated specifications"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Vibe Agency Team"}
]
keywords = ["ai", "planning", "software-development", "claude", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Runtime dependencies (CRITICAL - code imports these!)
dependencies = [
    "pyyaml>=6.0.1",        # YAML parsing
    "anthropic>=0.7.0",     # LLM client
    "beautifulsoup4>=4.12.0",  # Web scraping
    "requests>=2.31.0",     # HTTP client
]

[project.optional-dependencies]
# Development dependencies
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "yamllint>=1.35.0",
]

# Security scanning
security = [
    "pip-audit>=2.6.0",
    "detect-secrets>=1.4.0",
]

# All optional dependencies
all = [
    "vibe-agency[dev,security]",
]

[project.scripts]
# CLI entry points
vibe = "agency_os.cli:main"
vibe-orchestrator = "agency_os.core.orchestrator:main"

[project.urls]
Homepage = "https://github.com/kimeisele/vibe-agency"
Repository = "https://github.com/kimeisele/vibe-agency"
Issues = "https://github.com/kimeisele/vibe-agency/issues"
Documentation = "https://github.com/kimeisele/vibe-agency/docs"

# === PYTEST CONFIGURATION ===
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
addopts = [
    "--verbose",
    "--cov=agency_os",
    "--cov-report=html",
    "--cov-report=term-missing",
    "--cov-fail-under=50",  # Start with 50%, increase over time
]
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (slower, may use I/O)",
    "e2e: End-to-end tests (slowest, full workflow)",
    "smoke: Smoke tests (quick validation)",
]

# === BLACK CONFIGURATION ===
[tool.black]
line-length = 100
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
  | __pycache__
  | docs/archive
)/
'''

# === RUFF CONFIGURATION ===
[tool.ruff]
line-length = 100
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by black)
]
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "__pycache__",
    "docs/archive",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py
"tests/**/*.py" = ["S101"]  # Allow assert in tests

# === MYPY CONFIGURATION ===
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Start lenient, increase over time
ignore_missing_imports = true  # Many deps don't have types yet

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

# === COVERAGE CONFIGURATION ===
[tool.coverage.run]
source = ["agency_os"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

# === ISORT CONFIGURATION ===
[tool.isort]
profile = "black"
line_length = 100
